<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:summary="@string/action_settings" android:title="@string/action_settings">
     <!-- opens a subscreen of settings -->
    <PreferenceScreen
        android:key="app_config_category_key"
        android:title="@string/app_config"
        android:persistent="false">
        <CheckBoxPreference
            android:key="asthmaglobals.sound"
            android:summary="summary_asthmaglobals.sound_preference"
            android:title="title_asthmaglobals.sound_preference"
            android:defaultValue="true" />
         <EditTextPreference
            android:key="asthmaglobals.config.animation.totalStages"
            android:title="title_asthmaglobals.config.animation.totalStages_preference"
                android:summary="summary_asthmaglobals.config.animation.totalStages_preference"
                android:defaultValue="10"
                android:dialogTitle="dialog_asthmaglobals.config.animation.totalStages_preference"/>
         <EditTextPreference
            android:key="asthmaglobals.config.animation.totalDays"
           android:title="title_asthmaglobals.config.animation.totalDays_preference"
                android:summary="summary_asthmaglobals.config.animation.totalDays_preference"
                android:defaultValue="30"
                android:dialogTitle="dialog_asthmaglobals.config.animation.totalDays_preference"/>
          <EditTextPreference
            android:key="asthmaglobals.config.animation.startDateMilliSec"
           android:title="title_asthmaglobals.config.animation.startDateMilliSec_preference"
                android:summary="summary_asthmaglobals.config.animation.startDateMilliSec_preference"
                android:defaultValue="1363494545698"
                android:dialogTitle="dialog_asthmaglobals.config.animation.startDateMilliSec_preference"/>
          <EditTextPreference
            android:key="asthmaglobals.config.animation.currMood"
           android:title="title_asthmaglobals.config.animation.currMood_preference"
                android:summary="summary_asthmaglobals.config.animation.currMood_preference"
                android:defaultValue="sleepy"
                android:dialogTitle="dialog_asthmaglobals.config.animation.currMood_preference"/>
          <EditTextPreference
            android:key="asthmaglobals.config.animation.changeMood2"
           android:title="title_asthmaglobals.config.animation.changeMood2_preference"
                android:summary="summary_asthmaglobals.config.animation.changeMood2_preference"
                android:defaultValue=""
                android:dialogTitle="dialog_asthmaglobals.config.animation.changeMood2_preference"/>
          <EditTextPreference
            android:key="asthmaglobals.config.animation.switchMoodSleepy"
           android:title="title_asthmaglobals.config.animation.switchMoodSleepy_preference"
                android:summary="summary_asthmaglobals.config.animation.switchMoodSleepy_preference"
                android:defaultValue="60000"
                android:dialogTitle="dialog_asthmaglobals.config.animation.switchMoodSleepy_preference"/>
           <EditTextPreference
            android:key="asthmaglobals.teaseIndex"
           android:title="title_asthmaglobals.teaseIndex_preference"
                android:summary="summary_asthmaglobals.teaseIndex_preference"
                android:defaultValue="1"
                android:dialogTitle="dialog_asthmaglobals.teaseIndex_preference"/>
            <EditTextPreference
            android:key="asthmaglobals.teaseSnapTimeinMillis"
           android:title="title_asthmaglobals.teaseSnapTimeinMillis_preference"
                android:summary="summary_asthmaglobals.teaseSnapTimeinMillis_preference"
                android:defaultValue="0"
                android:dialogTitle="dialog_asthmaglobals.teaseSnapTimeinMillis_preference"/>
             <EditTextPreference
            android:key="asthmaglobals.nextReadingTimeinMillis"
           android:title="title_asthmaglobals.nextReadingTimeinMillis_preference"
                android:summary="summary_asthmaglobals.nextReadingTimeinMillis_preference"
                android:defaultValue="0"
                android:dialogTitle="dialog_asthmaglobals.nextReadingTimeinMillis_preference"/>
             <EditTextPreference
            android:key="asthmaglobals.config.contactName"
           android:title="title_asthmaglobals.config.contactName_preference"
                android:summary="summary_asthmaglobals.config.contactName_preference"
                android:defaultValue="Name: abcdxyz"
                android:dialogTitle="dialog_asthmaglobals.config.contactName_preference"/>
             <EditTextPreference
            android:key="asthmaglobals.config.contactPhone"
           android:title="title_asthmaglobals.config.contactPhone_preference"
                android:summary="summary_asthmaglobals.config.contactPhone_preference"
                android:defaultValue="Phone: (123)456-789"
                android:dialogTitle="dialog_asthmaglobals.config.contactPhone_preference"/>
             <EditTextPreference
            android:key="asthmaglobals.config.alertInfo.spiroReadingTime"
           android:title="title_asthmaglobals.config.alertInfo.spiroReadingTime_preference"
                android:summary="summary_asthmaglobals.config.alertInfo.spiroReadingTime_preference"
                android:defaultValue="0046,0049,0053,0057,0800,1300,1700,1930,2000"
                android:dialogTitle="dialog_asthmaglobals.config.alertInfo.spiroReadingTime_preference"/>
              <EditTextPreference
            android:key="asthmaglobals.config.alertInfo.dynamicReadingAlertText"
           android:title="title_asthmaglobals.config.alertInfo.dynamicReadingAlertText_preference"
                android:summary="summary_asthmaglobals.config.alertInfo.dynamicReadingAlertText_preference"
                android:defaultValue="The air quality doesn't seem good, please take a reading."
                android:dialogTitle="dialog_asthmaglobals.config.alertInfo.dynamicReadingAlertText_preference"/>
               <EditTextPreference
            android:key="asthmaglobals.config.alertInfo.intervalInTwoReadings"
           android:title="title_asthmaglobals.config.alertInfo.intervalInTwoReadings_preference"
                android:summary="summary_asthmaglobals.config.alertInfo.intervalInTwoReadings_preference"
                android:defaultValue="120000"
                android:dialogTitle="dialog_asthmaglobals.config.alertInfo.intervalInTwoReadings_preference"/>
                <EditTextPreference
            android:key="asthmaglobals.config.alertInfo.symptomBoxText"
           android:title="title_asthmaglobals.config.alertInfo.symptomBoxText_preference"
                android:summary="summary_asthmaglobals.config.alertInfo.symptomBoxText_preference"
                android:defaultValue="Are You having Symptoms?"
                android:dialogTitle="dialog_asthmaglobals.config.alertInfo.symptomBoxText_preference"/>
                 <EditTextPreference
            android:key="asthmaglobals.config.alertInfo.sound"
           android:title="title_asthmaglobals.config.alertInfo.sound_preference"
                android:summary="summary_asthmaglobals.config.alertInfo.sound_preference"
                android:defaultValue="true"
                android:dialogTitle="dialog_asthmaglobals.config.alertInfo.sound_preference"/>
                  <EditTextPreference
            android:key="asthmaglobals.config.alertInfo.alertLength"
           android:title="title_asthmaglobals.config.alertInfo.alertLength_preference"
                android:summary="summary_asthmaglobals.config.alertInfo.alertLength_preference"
                android:defaultValue="60000"
                android:dialogTitle="dialog_asthmaglobals.config.alertInfo.alertLength_preference"/>
                  <EditTextPreference
            android:key="asthmaglobals.config.maxValues.FEVValue"
           android:title="title_asthmaglobals.config.maxValues.FEVValue_preference"
                android:summary="summary_asthmaglobals.config.maxValues.FEVValue_preference"
                android:defaultValue="50.0"
                android:dialogTitle="dialog_asthmaglobals.config.maxValues.FEVValue_preference"/>
                  <EditTextPreference
            android:key="asthmaglobals.config.minValues.FEVValue"
           android:title="title_asthmaglobals.config.minValues.FEVValue_preference"
                android:summary="summary_asthmaglobals.config.minValues.FEVValue_preference"
                android:defaultValue="1.0"
                android:dialogTitle="dialog_asthmaglobals.config.minValues.FEVValue_preference"/>
                  <EditTextPreference
            android:key="asthmaglobals.config.maxValues.PEFValue"
           android:title="title_asthmaglobals.config.maxValues.PEFValue_preference"
                android:summary="summary_asthmaglobals.config.maxValues.PEFValue_preference"
                android:defaultValue="800"
                android:dialogTitle="dialog_asthmaglobals.config.maxValues.PEFValue_preference"/>
                  <EditTextPreference
            android:key="asthmaglobals.config.minValues.PEFValue"
           android:title="title_asthmaglobals.config.minValues.PEFValue_preference"
                android:summary="summary_asthmaglobals.config.minValues.PEFValue_preference"
                android:defaultValue="10"
                android:dialogTitle="dialog_asthmaglobals.config.minValues.PEFValue_preference"/>
                  <EditTextPreference
            android:key="asthmaglobals.config.patientID"
           android:title="title_asthmaglobals.config.patientID_preference"
                android:summary="summary_asthmaglobals.config.patientID_preference"
                android:defaultValue="1"
                android:dialogTitle="dialog_asthmaglobals.config.patientID_preference"/>
                   <EditTextPreference
            android:key="asthmaglobals.config.deviceID"
           android:title="title_asthmaglobals.config.deviceID_preference"
                android:summary="summary_asthmaglobals.config.deviceID_preference"
                android:defaultValue="1"
                android:dialogTitle="dialog_asthmaglobals.config.deviceID_preference"/>
                  
           
        </PreferenceScreen>
        <PreferenceScreen
        android:key="monitoring_category_key"
        android:title="@string/monitoring"
        android:persistent="false">
        <EditTextPreference
            android:key="deviceId"
            android:title="title_deviceId_preference"
                android:summary="summary_deviceId_preference"
                android:defaultValue="aqm0"
                android:dialogTitle="dialog_title_deviceId_preference"/>
        <EditTextPreference
            android:key="userId"
            android:title="title_userId_preference"
                android:summary="summary_userId_preference"
                android:defaultValue="user0"
                android:dialogTitle="dialog_title_userId_preference"/>
        <EditTextPreference
            android:key="geoMethod"
            android:title="title_geoMethod_preference"
                android:summary="summary_geoMethod_preference"
                android:defaultValue="manual"
                android:dialogTitle="dialog_geoMethod_preference"/>
        <EditTextPreference
            android:key="url"
            android:title="title_url_preference"
                android:summary="summary_url_preference"
                android:defaultValue="http://lead2.poly.asu.edu:8090/AQMEcho/aqmecho"
                android:dialogTitle="dialog_title_url_preference"/>
        <EditTextPreference
            android:key="geoLongitude"
            android:title="title_geoLongitude_preference"
                android:summary="summary_geoLongitude_preference"
                android:defaultValue="36.10743118848039"
                android:dialogTitle="dialog_geoLongitude_preference"/>
        <EditTextPreference
            android:key="geoLatitude"
            android:title="title_geoLatitud_preference"
                android:summary="summary_geoLatitude_preference"
                android:defaultValue="63.017578125"
                android:dialogTitle="dialog_geoLatitude_preference"/>
        <EditTextPreference
            android:key="thread_size"
            android:title="title_thread_size_preference"
                android:summary="summary_thread_size_preference"
                android:defaultValue="2"
                android:dialogTitle="dialog_thread_size_preference"/>
        <EditTextPreference
            android:key="grace_period"
            android:title="title_grace_period_preference"
                android:summary="summary_grace_period_preference"
                android:defaultValue="200"
                android:dialogTitle="dialog_grace_period_preference"/>
        <EditTextPreference
            android:key="periodic_delay"
            android:title="title_periodic_delay_preference"
                android:summary="summary_periodic_delay_preference"
                android:defaultValue="300000"
                android:dialogTitle="dialog_periodic_delay_preference"/>
        <EditTextPreference
            android:key="last_toggle_status"
            android:title="title_last_toggle_status_preference"
                android:summary="summary_last_toggle_status_preference"
                android:defaultValue="false"
                android:dialogTitle="dialog_last_toggle_status_preference"/>
        </PreferenceScreen>
    </PreferenceScreen>
